# mThesis-public

./: .gitignore  README.md
code_folder/02_implementations/lidar_tps_pipeline/: .gitignore  CMakeLists.txt
code_folder/02_implementations/lidar_tps_pipeline/include/: bgr_to_nv12.cuh  composite.cuh  cuda_check.cuh  gain.cuh  lidar_project.cuh  lidar_tps_pipeline.hpp  lidar_types.hpp  mat3f.cuh  nvenc_writer.hpp  rotation_remap.cuh  seam_cost.cuh  tps_remap.cuh
code_folder/02_implementations/lidar_tps_pipeline/kernels/: bgr_to_nv12.cu  composite.cu  gain.cu  lidar_project.cu  rotation_remap.cu  seam_cost.cu  tps_remap.cu
code_folder/02_implementations/lidar_tps_pipeline/src/: lidar_tps_pipeline.cpp  main.cpp  nvenc_writer.cpp
code_folder/02_implementations/lidar_tps_pipeline/utils/: aggregate_multilog.py  compute_overlaps.py  condition_number_sweep.py  cylindrical.py  debug_lidar_stitch.py  eval_pipeline.py  extract_lidar_bin.py  extract_lidar_depth.py  gen_sweep_visuals.py  lidar_ring_stitch.py  lidar_verify.py  lidar_verify_multi.py  lidar_verify_visual.py  make_debug_visuals.py  qa_lidar_stitch.py  run_gain_ablation_multilog.py  run_lambda_sweep_multilog.py  run_m_sweep_multilog.py  run_rich_multilog.py  run_rmin_sweep.py  run_rmin_sweep_multilog.py  sweep_params.py  test_lidar_stitch.py  verify_lidar_align.py  vis_stitch_full.py  visualize_debug.py  viz_lidar_stitch.py
code_folder/03_eval/: aggregate_paired_comparison.py  calibrate_channel_weights.py  calibrate_psnr_weights.py  ctrl_pt_density.csv  ctrl_pt_density_sweep.py  lidar_homography_baseline.py  lidar_homography_baseline_00a6ffc1.csv  lidar_homography_baseline_01bb304d.csv  lidar_homography_baseline_022af476.csv  lidar_homography_baseline_04973bcf.csv  lidar_homography_baseline_05853f69.csv  lidar_homography_baseline_072c8e90.csv  lidar_homography_baseline_087695bd.csv  lidar_homography_baseline_0a524e66.csv  lidar_homography_baseline_10log_paired.csv  lidar_homography_baseline_12071817.csv  lidar_homography_baseline_12c3c14b.csv  lidar_homography_baseline_64.csv  log_diversity_scan.csv  log_diversity_scan.json  multi_log_eval.py  paired_ttests.py  prep_av2_logs.py  results_multilog.csv  results_multilog_summary.csv  run_baselines_multilog.sh  scan_log_diversity.py  sift_baseline.py  sift_baseline_00a6ffc1.csv  sift_baseline_01bb304d.csv  sift_baseline_022af476.csv  sift_baseline_04973bcf.csv  sift_baseline_05853f69.csv  sift_baseline_072c8e90.csv  sift_baseline_087695bd.csv  sift_baseline_0a524e66.csv  sift_baseline_10log_paired.csv  (+6 more)
sample_data/: README.md  calibration.json  frames.json
